--- a/ex4400-s2.conf
+++ b/ex4400-s2.conf
@@ -71,150 +71,7 @@ groups {
             }
         }
     }
-    config3 {
-        interfaces {
-            xe-0/2/1 {
-                mtu 9000;
-                unit 0 {
-                    family inet {
-                        address 10.0.0.1/31;
-                    }
-                }
-            }
-            lo0 {
-                unit 0 {
-                    family inet {
-                        address 10.0.255.2/32;
-                    }
-                }
-            }
-            xe-0/2/0 {
-                mtu 9000;
-                unit 0 {
-                    family ethernet-switching {
-                        interface-mode trunk;
-                        vlan {
-                            members 101-103;
-                        }
-                        storm-control default;
-                    }
-                }
-            }
-        }
-        policy-options {
-            policy-statement underlay_export {
-                term 1 {
-                    from {
-                        protocol direct;
-                        interface lo0.0;
-                    }
-                    then accept;
-                }
-            }
-            policy-statement MY-FABRIC-IMPORT {
-                term 1 {
-                    from community COM-MY-FABRIC;
-                    then accept;
-                }
-                term 2 {
-                    from community COM-VNI-10101;
-                    then accept;
-                }
-                term 3 {
-                    from community COM-VNI-10102;
-                    then accept;
-                }
-                term 4 {
-                    from community COM-VNI-10103;
-                    then accept;
-                }
-                term default {
-                    then reject;
-                }
-            }
-            community COM-MY-FABRIC members target:1:8888;
-            community COM-VNI-10101 members target:1000:101;
-            community COM-VNI-10102 members target:1000:102;
-            community COM-VNI-10103 members target:1000:103;
-        }
-        routing-options {
-            router-id 10.0.255.2;
-            forwarding-table {
-                chained-composite-next-hop {
-                    ingress {
-                        evpn;
-                    }
-                }
-            }
-        }
-        protocols {
-            bgp {
-                group to_s1_underlay {
-                    multipath {
-                        multiple-as;
-                    }
-                    neighbor 10.0.0.0 {
-                        export underlay_export;
-                        peer-as 1;
-                        local-as 2;
-                    }
-                    vpn-apply-export;
-                }
-                group to_s1_overlay {
-                    type internal;
-                    local-address 10.0.255.2;
-                    family evpn {
-                        signaling;
-                    }
-                    local-as 1000;
-                    neighbor 10.0.255.1;
-                    vpn-apply-export;
-                }
-            }
-            evpn {
-                encapsulation vxlan;
-                multicast-mode ingress-replication;
-                vni-options {
-                    vni 10101 {
-                        vrf-target target:1000:101;
-                    }
-                    vni 10102 {
-                        vrf-target target:1000:102;
-                    }
-                    vni 10103 {
-                        vrf-target target:1000:103;
-                    }
-                }
-                extended-vni-list [ 10101 10102 10103 ];
-            }
-        }
-        switch-options {
-            vtep-source-interface lo0.0;
-            route-distinguisher 10.0.255.2:1;
-            vrf-import MY-FABRIC-IMPORT;
-            vrf-target target:1:8888;
-        }
-        vlans {
-            vlan101 {
-                vlan-id 101;
-                vxlan {
-                    vni 10101;
-                }
-            }
-            vlan102 {
-                vlan-id 102;
-                vxlan {
-                    vni 10102;
-                }
-            }
-            vlan103 {
-                vlan-id 103;
-                vxlan {
-                    vni 10103;
-                }
-            }
-        }
-    }
+    /* L2 over EVPN */
     config4 {
         interfaces {
             xe-0/2/1 {
@@ -316,6 +173,7 @@ groups {
             }
         }
     }
+    /* multiple vlan over EVPN/VxLAN */
     config5 {
         interfaces {
             xe-0/2/1 {
@@ -420,565 +278,3 @@ groups {
     }
 }
 apply-groups config5;
-#
-# $Id:$
-#
-# Copyright (c) 2020, Juniper Networks, Inc.
-# All rights reserved.
-#
-# Filename: ex4400-48p-factory.conf
-# Platform: EX4400-48P
-# Description: Factory default config for Junos.
-#
-#
-system {
-    host-name s2;
-    root-authentication {
-        encrypted-password "$6$1LSh6yJC$gg.5wQfoCJpNSC3OZI4nEVSN/Ic80DeFOB29p5lOgECz5gjUzEzqs2p.JB5axy2OB4TkxSSt7KDExh9Tes45e/"; ## SECRET-DATA
-    }
-    login {
-        user jcluser {
-            uid 2000;
-            class super-user;
-            authentication {
-                encrypted-password "$6$E5Q3.ipk$vT/LSKiVtr8CIdL4/2vm5PUWmtDUgAAIzn3kDiSEsAkfuDG641nFQgfpTqp.qojPzeJLtZr7NgjyZIweEjoEX1"; ## SECRET-DATA
-            }
-        }
-        user labuser {
-            uid 2001;
-            class super-user;
-            authentication {
-                encrypted-password "$6$PKyGI5SW$1GUkrMgBE2OXfHW2Xusnci9YNtUwbmyuqcvYbrRPyNDAN.Ra4rGW7kf8rOyg9Q9qiv7IQFDLVmlWHdhi60JTi."; ## SECRET-DATA
-            }
-        }
-    }
-    services {
-        netconf {
-            ssh;
-            rfc-compliant;
-            yang-compliant;
-        }
-        ssh {
-            root-login allow;
-            sftp-server;
-        }
-        rest {
-            http {
-                port 3000;
-            }
-            enable-explorer;
-        }
-    }
-    auto-snapshot;
-    name-server {
-        100.123.0.1;
-    }
-    syslog {
-        file interactive-commands {
-            interactive-commands any;
-        }
-        file messages {
-            any notice;
-            authorization info;
-        }
-    }
-    ntp {
-        server 100.123.0.1;
-    }
-    phone-home {
-        server https://redirect.juniper.net;
-        rfc-compliant;
-    }
-}
-chassis {
-    redundancy {
-        graceful-switchover;
-    }
-}
-interfaces {
-    ge-0/0/0 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/1 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/2 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/3 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/4 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/5 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/6 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/7 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/8 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/9 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/10 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/11 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/12 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/13 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/14 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/15 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/16 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/17 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/18 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/19 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/20 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/21 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/22 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/23 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/24 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/25 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/26 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/27 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/28 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/29 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/30 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/31 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/32 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/33 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/34 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/35 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/36 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/37 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/38 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/39 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/40 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/41 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/42 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/43 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/44 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/45 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/46 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/0/47 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    et-0/2/0 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/2/0 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    et-0/2/1 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/2/1 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    et-0/2/2 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/2/2 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    xe-0/2/2 {
-        disable;
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    et-0/2/3 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    ge-0/2/3 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    xe-0/2/3 {
-        unit 0 {
-            family ethernet-switching {
-                storm-control default;
-            }
-        }
-    }
-    me0 {
-        unit 0 {
-            family inet {
-                address 100.123.105.102/16;
-            }
-        }
-    }
-}
-forwarding-options {
-    storm-control-profiles default {
-        all;
-    }
-}
-routing-options {
-    static {
-        route 0.0.0.0/0 next-hop 100.123.0.1;
-    }
-}
-protocols {
-    lldp {
-        interface xe-0/2/1;
-    }
-    igmp-snooping {
-        vlan default;
-    }
-    rstp {
-        interface ge-0/0/0;
-        interface ge-0/0/1;
-        interface ge-0/0/2;
-        interface ge-0/0/3;
-        interface ge-0/0/4;
-        interface ge-0/0/5;
-        interface ge-0/0/6;
-        interface ge-0/0/7;
-        interface ge-0/0/8;
-        interface ge-0/0/9;
-        interface ge-0/0/10;
-        interface ge-0/0/11;
-        interface ge-0/0/12;
-        interface ge-0/0/13;
-        interface ge-0/0/14;
-        interface ge-0/0/15;
-        interface ge-0/0/16;
-        interface ge-0/0/17;
-        interface ge-0/0/18;
-        interface ge-0/0/19;
-        interface ge-0/0/20;
-        interface ge-0/0/21;
-        interface ge-0/0/22;
-        interface ge-0/0/23;
-        interface ge-0/0/24;
-        interface ge-0/0/25;
-        interface ge-0/0/26;
-        interface ge-0/0/27;
-        interface ge-0/0/28;
-        interface ge-0/0/29;
-        interface ge-0/0/30;
-        interface ge-0/0/31;
-        interface ge-0/0/32;
-        interface ge-0/0/33;
-        interface ge-0/0/34;
-        interface ge-0/0/35;
-        interface ge-0/0/36;
-        interface ge-0/0/37;
-        interface ge-0/0/38;
-        interface ge-0/0/39;
-        interface ge-0/0/40;
-        interface ge-0/0/41;
-        interface ge-0/0/42;
-        interface ge-0/0/43;
-        interface ge-0/0/44;
-        interface ge-0/0/45;
-        interface ge-0/0/46;
-        interface ge-0/0/47;
-    }
-}
-poe {
-    interface all;
-}
