--- a/ex4400-s2.conf
+++ b/ex4400-s2.conf
@@ -276,5 +276,109 @@ groups {
             }
         }
     }
+    /* multiple vlan over EVPN/VxLAN */
+    config6 {
+        interfaces {
+            xe-0/2/1 {
+                mtu 9000;
+                unit 0 {
+                    family inet {
+                        address 10.0.0.1/31;
+                    }
+                }
+            }
+            lo0 {
+                unit 0 {
+                    family inet {
+                        address 10.0.255.2/32;
+                    }
+                }
+            }
+            xe-0/2/0 {
+                flexible-vlan-tagging;
+                mtu 9000;
+                encapsulation extended-vlan-bridge;
+				native-vlan-id 1;
+                unit 101 {
+                    vlan-id-list [1 201-203];
+                }
+            }
+        }
+        policy-options {
+            policy-statement underlay_export {
+                term 1 {
+                    from {
+                        protocol direct;
+                        interface lo0.0;
+                    }
+                    then accept;
+                }
+            }
+            policy-statement MY-FABRIC-IMPORT {
+                term 1 {
+                    from community COM-VNI-10101;
+                    then accept;
+                }
+                term default {
+                    then reject;
+                }
+            }
+            community COM-VNI-10101 members target:1000:101;
+        }
+        routing-options {
+            router-id 10.0.255.2;
+        }
+        protocols {
+            bgp {
+                group to_s2_underlay {
+                    multipath {
+                        multiple-as;
+                    }
+                    neighbor 10.0.0.0 {
+                        export underlay_export;
+                        peer-as 1;
+                        local-as 2;
+                    }
+                }
+                group to_s1_overlay {
+                    type internal;
+                    local-address 10.0.255.2;
+                    family evpn {
+                        signaling;
+                    }
+                    local-as 1000;
+                    neighbor 10.0.255.1;
+                }
+            }
+            evpn {
+                encapsulation vxlan;
+                multicast-mode ingress-replication;
+                vni-options {
+                    vni 10101 {
+                        vrf-target target:1000:101;
+                    }
+                }
+                extended-vni-list 10101;
+            }
+            l2-learning {
+                decapsulate-accept-inner-vlan;
+            }
+        }
+        switch-options {
+            vtep-source-interface lo0.0;
+            route-distinguisher 10.0.255.2:1;
+            vrf-import MY-FABRIC-IMPORT;
+            vrf-target target:1000:1;
+        }
+        vlans {
+            vlan101 {
+                interface xe-0/2/0.101;
+                vxlan {
+                    vni 10101;
+                    encapsulate-inner-vlan;
+                }
+            }
+        }
+    }
 }
 apply-groups config5;
